[gd_scene load_steps=9 format=3 uid="uid://v224q32i67ns"]

[ext_resource type="Script" uid="uid://crti2xwovkeyk" path="res://Scripts/party_slot.gd" id="1_1fhgy"]
[ext_resource type="Texture2D" uid="uid://duasghhm14jjl" path="res://Resources/Sprites/UI_TravelBook_Slot01a.png" id="2_esxar"]
[ext_resource type="Texture2D" uid="uid://brmqmm0qbang6" path="res://Resources/Portraits/Transperent/Icon1.png" id="3_k64le"]
[ext_resource type="Texture2D" uid="uid://dout3p0cb4kjp" path="res://Resources/Sprites Animated/UI_TravelBook_SlotCursor01a_1.png" id="4_5xlkt"]
[ext_resource type="Texture2D" uid="uid://1j4wqndnqnr3" path="res://Resources/Sprites Animated/UI_TravelBook_SlotCursor01a_2.png" id="5_m6lmu"]
[ext_resource type="Texture2D" uid="uid://bmalybikwu6en" path="res://Resources/Sprites/UI_TravelBook_FrameSelect01b.png" id="6_7gpl8"]
[ext_resource type="FontFile" uid="uid://b1s1rbc2pq2bd" path="res://Resources/Fonts/Berry Rotunda.ttf" id="7_uavlv"]

[sub_resource type="SpriteFrames" id="SpriteFrames_pj1ht"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_5xlkt")
}, {
"duration": 1.0,
"texture": ExtResource("5_m6lmu")
}],
"loop": true,
"name": &"default",
"speed": 3.0
}]

[node name="PartySlot" type="TextureButton"]
custom_minimum_size = Vector2(175, 175)
script = ExtResource("1_1fhgy")

[node name="PortraitSlot" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(150, 150)
layout_mode = 0
offset_left = 12.0
offset_top = 28.0
offset_right = 162.0
offset_bottom = 178.0
texture = ExtResource("2_esxar")

[node name="RemoveHighlight" type="ColorRect" parent="PortraitSlot"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 139.0
color = Color(0.984415, 0.433874, 0.348629, 0.270588)

[node name="Portrait" type="TextureRect" parent="PortraitSlot"]
visible = false
layout_mode = 0
offset_left = 11.0
offset_top = 10.0
offset_right = 140.0
offset_bottom = 139.0
texture = ExtResource("3_k64le")
metadata/_edit_lock_ = true

[node name="TextureRect" type="AnimatedSprite2D" parent="PortraitSlot"]
visible = false
position = Vector2(74.5, 75)
scale = Vector2(5.16667, 5.13333)
sprite_frames = SubResource("SpriteFrames_pj1ht")
autoplay = "default"
frame_progress = 0.281325

[node name="LabelRank" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 93.0
offset_top = 137.0
offset_right = 145.0
offset_bottom = 160.0
text = "Rank S"

[node name="LabelNameBG" type="TextureRect" parent="."]
layout_mode = 0
offset_top = -6.0
offset_right = 172.0
offset_bottom = 23.0
texture = ExtResource("6_7gpl8")

[node name="LabelName" type="Label" parent="."]
modulate = Color(0.388235, 0.25098, 0.254902, 1)
layout_mode = 0
offset_left = 8.0
offset_right = 170.0
offset_bottom = 20.0
theme_override_fonts/font = ExtResource("7_uavlv")
theme_override_font_sizes/font_size = 16
text = "Empty"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
